[gd_scene load_steps=11 format=2]

[ext_resource path="res://scripts/gui/notification_gui.gd" type="Script" id=1]
[ext_resource path="res://resources/atlas-textures/device-keys/key_playstation_triangle.tres" type="Texture" id=2]
[ext_resource path="res://systems/joypad-support/device-assets-loaders/DeviceAssetsLoaderNotificationGUI.tscn" type="PackedScene" id=3]
[ext_resource path="res://systems/joypad-support/notifications-data/lists/pc/data_list_-_level_1.tres" type="Resource" id=4]

[sub_resource type="StyleBoxFlat" id=69]
bg_color = Color( 0.00392157, 0, 0.0705882, 1 )
corner_radius_top_left = 32
corner_radius_top_right = 32
corner_radius_bottom_right = 32
corner_radius_bottom_left = 32

[sub_resource type="DynamicFontData" id=76]
font_path = "res://assets/fonts/augie.ttf"

[sub_resource type="DynamicFont" id=77]
size = 35
font_data = SubResource( 76 )

[sub_resource type="Animation" id=75]
resource_name = "Hide"
length = 1.2
tracks/0/type = "bezier"
tracks/0/path = NodePath("Panel:rect_position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray(  ),
"times": PoolRealArray(  )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Panel:rect_position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 100, -0.25, 0, 0.25, 0, 181.547, -0.25, 0, 0.25, 0, -200, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.6, 1.2 )
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=73]
resource_name = "RESET"
tracks/0/type = "bezier"
tracks/0/path = NodePath("Panel:rect_position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 495, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Panel:rect_position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=74]
resource_name = "Show"
length = 1.15
tracks/0/type = "bezier"
tracks/0/path = NodePath("Panel:rect_position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 645, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Panel:rect_position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( -240, -0.25, 0, 0.25, 0, 181.547, -0.25, 0, 0.25, 0, 100, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.75, 1.15 )
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[node name="NotificationGUI" type="Control"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 1 )
data_list_from_platform = ExtResource( 4 )

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -465.0
margin_right = 443.0
margin_bottom = 234.0
mouse_filter = 1
custom_styles/panel = SubResource( 69 )

[node name="KeyIcon" type="TextureRect" parent="Panel"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 39.0
margin_top = -45.0
margin_right = 139.0
margin_bottom = 55.0
texture = ExtResource( 2 )

[node name="LabelTop" type="Label" parent="Panel"]
margin_left = 169.0
margin_top = 25.0
margin_right = 894.0
margin_bottom = 75.0
size_flags_vertical = 7
custom_colors/font_color = Color( 0.776471, 0, 0.384314, 1 )
custom_fonts/font = SubResource( 77 )
text = "Press F to pay respects"
align = 1
valign = 1
autowrap = true
clip_text = true

[node name="LabelBottom" type="Label" parent="Panel"]
margin_left = 169.0
margin_top = 82.0
margin_right = 894.0
margin_bottom = 217.0
size_flags_vertical = 7
custom_colors/font_color = Color( 1, 0.580392, 0.788235, 1 )
custom_fonts/font = SubResource( 77 )
text = "and once your' done go to the over side of the riiiiiiiiiiiiiiiiiiiiiiiiiiver!"
align = 1
valign = 1
autowrap = true
clip_text = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "RESET"
anims/Hide = SubResource( 75 )
anims/RESET = SubResource( 73 )
anims/Show = SubResource( 74 )

[node name="DeviceAssetsLoaderNotificationGUI" parent="." instance=ExtResource( 3 )]
node_to_work_on_node_path = NodePath("..")
